增加web组件，否则client无法启动

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+        <!--Eureka Client由于需要与Server进行HTTP交互，必须依赖web组件-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
